--- a/Views/ManageMembershipView.axaml
+++ b/Views/ManageMembershipView.axaml
@@ -33,8 +33,8 @@
 		<converters:IntToInverseBoolConverter x:Key="IntToInverseBoolConverter"/>
 		<converters:DateToStringConverter x:Key="DateToStringConverter"/>
 		<converters:StringToBitmapConverter x:Key="StringToBitmapConverter"/>
-		<converters:StatusToDeleteEnabledConverter x:Key="StatusToDeleteEnabledConverter"/>
 		<converters:StatusAndCanDeleteSelectedConverter x:Key="StatusAndCanDeleteSelectedConverter"/>
+		<converters:StatusAndSelectedToDeleteEnabledConverter x:Key="StatusAndSelectedToDeleteEnabledConverter"/>
 	</UserControl.Resources>
 
 	<DockPanel LastChildFill="True">
@@ -327,9 +327,17 @@
 															Header="Delete"
 															Foreground="{DynamicResource DestructiveColor}"
 															Command="{CompiledBinding $parent[DataGrid].((viewModels:ManageMembershipViewModel)DataContext).ShowSingleItemDeletionDialogCommand, FallbackValue={x:Null}}"
-															IsEnabled="{CompiledBinding Status, Converter={StaticResource StatusToDeleteEnabledConverter}, FallbackValue=False}"
 															CommandParameter="{CompiledBinding}"
-															IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:ManageMembershipViewModel)DataContext).SelectedCount, Converter={StaticResource IntToInverseBoolConverter}, FallbackValue={x:Null}}"/>
+															IsVisible="{CompiledBinding $parent[DataGrid].((viewModels:ManageMembershipViewModel)DataContext).SelectedCount, Converter={StaticResource IntToInverseBoolConverter}, FallbackValue={x:Null}}">
+															<MenuItem.IsEnabled>
+																<MultiBinding Converter="{StaticResource StatusAndSelectedToDeleteEnabledConverter}">
+																	<!-- 1) status of the row where the menu is opened -->
+																	<Binding Path="Status" />
+																	<!-- 2) currently selected member's status from the viewmodel (may be null) -->
+																	<Binding Path="$parent[DataGrid].((viewModels:ManageMembershipViewModel)DataContext).SelectedMember.Status" FallbackValue="{x:Null}" />
+																</MultiBinding>
+															</MenuItem.IsEnabled>
+														</MenuItem>
 														<MenuItem
 															Header="Delete Selected"
 															Foreground="{DynamicResource DestructiveColor}"
@@ -341,7 +349,7 @@
 																	<!-- current row's Status -->
 																	<Binding Path="Status" />
 																	<!-- view-model global flag -->
-																	<Binding Path="$parent[DataGrid].((viewModels:ManageMembershipViewModel)DataContext).CanDeleteSelectedMembers" />
+																	<Binding Path="$parent[DataGrid].((viewModels:ManageMembershipViewModel)DataContext).CanDeleteSelectedMembers" FallbackValue="{x:Null}"/>
 																</MultiBinding>
 															</MenuItem.IsEnabled>
 														</MenuItem>
