--- a/Views/ManageBillingView.axaml
+++ b/Views/ManageBillingView.axaml
@@ -206,7 +206,8 @@
                                                 <Button
                                                     Classes="Primary"
                                                     Background="{DynamicResource InfoColor}"
-                                                    HorizontalAlignment="Left">
+                                                    HorizontalAlignment="Left"
+                                                    Command="{CompiledBinding DownloadInvoicesCommand}">
                                                     <StackPanel Orientation="Horizontal">
                                                         <Svg
                                                             Width="20"
@@ -215,7 +216,7 @@
                                                             VerticalAlignment="Center"
                                                             Path="avares://AHON_TRACK/Assets/ManageBillingView/download-icon.svg" />
                                                         <TextBlock
-                                                            Text="Download Invoice"
+                                                            Text="Download Invoices (PDF)"
                                                             Foreground="White"
                                                             VerticalAlignment="Center" />
                                                     </StackPanel>
