feat(audit-logs): add and implement bindings for audit-log PDF document download-button

--- a/Views/AuditLogsView.axaml
+++ b/Views/AuditLogsView.axaml
@@ -91,7 +91,8 @@
                                     <Button 
                                         HorizontalAlignment="Right"
                                         Grid.Column="3"
-                                        Classes="Primary">
+                                        Classes="Primary"
+                                        Command="{CompiledBinding DownloadAuditLogsCommand}">
                                         <StackPanel Orientation="Horizontal">
                                             <Svg
                                                 Width="20"
@@ -99,7 +100,7 @@
                                                 Path="avares://AHON_TRACK/Assets/AuditLogsView/download-icon.svg"
                                                 VerticalAlignment="Center"
                                                 Margin="0,0,8,0"/>
-                                            <TextBlock Text="Download" VerticalAlignment="Center"/>
+                                            <TextBlock Text="Download PDF" VerticalAlignment="Center"/>
                                         </StackPanel>
                                     </Button>
                                 </Grid>
