refactor(manage-membership): remove refund functionality

--- a/Views/ManageMembershipView.axaml
+++ b/Views/ManageMembershipView.axaml
@@ -551,22 +551,7 @@
 									<Button
 										Classes="Destructive"
 										Padding="20,0,20,0"
-										IsVisible="{CompiledBinding !IsRefundButtonVisible}"
-										Command="{CompiledBinding ShowRefundMemberDialogCommand}">
-										<StackPanel Orientation="Horizontal">
-											<Svg
-												Width="18"
-												Height="18"
-												Margin="0,0,10,0"
-												VerticalAlignment="Center"
-												Path="avares://AHON_TRACK/Assets/ManageMembershipView/delete-icon.svg" />
-											<TextBlock Text="Refund" Foreground="White" VerticalAlignment="Center" />
-										</StackPanel>
-									</Button>
-									<Button
-										Classes="Destructive"
-										Padding="20,0,20,0"
-										IsVisible="{CompiledBinding IsRefundButtonVisible}"
+										IsEnabled="{CompiledBinding !IsDeleteButtonEnabled}"
 										Command="{CompiledBinding ShowDeleteMemberDialogCommand}">
 										<StackPanel Orientation="Horizontal">
 											<Svg
