--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -340,7 +340,7 @@
 										Fallback="CN"
 										IsVisible="{CompiledBinding !$parent[shadui:Sidebar].Expanded}"
                                         Opacity="{CompiledBinding !$parent[shadui:Sidebar].Expanded, Converter={x:Static converters:BooleanConverters.Opaque}}"
-										Source="avares://AHON_TRACK/Assets/MainWindowView/user-admin.png">
+										Source="{CompiledBinding AvatarSource}">
 										<shadui:Avatar.Transitions>
 											<Transitions>
 												<DoubleTransition Property="Opacity" Duration="0:0:0.20"/>
@@ -357,13 +357,13 @@
 											Margin="0,0,8,0"
 											CornerRadius="{DynamicResource XlCornerRadius}"
 											Fallback="CN"
-											Source="avares://AHON_TRACK/Assets/MainWindowView/user-admin.png"/>
+											Source="{CompiledBinding AvatarSource}"/>
 										<StackPanel Grid.Column="1" VerticalAlignment="Center">
-											<TextBlock Classes="Small" Text="Mardie Dela Cruz" />
+											<TextBlock Classes="Small" Text="{CompiledBinding Username}" />
 											<TextBlock
                                                 Margin="0,-4,0,0"
                                                 Classes="Caption"
-                                                Text="Gym Admin" />
+                                                Text="{CompiledBinding Role}" />
 										</StackPanel>
 										<Viewbox
                                             Grid.Column="2"
@@ -385,13 +385,13 @@
 										Margin="0,0,8,0"
 										CornerRadius="{DynamicResource XlCornerRadius}"
 										Fallback="CN"
-										Source="avares://AHON_TRACK/Assets/MainWindowView/user-admin.png"/>
+										Source="{CompiledBinding AvatarSource}"/>
 									<StackPanel Grid.Column="1" VerticalAlignment="Center">
-										<TextBlock Classes="Small" Text="Mardie Dela Cruz"/>
+										<TextBlock Classes="Small" Text="{CompiledBinding Username}"/>
 										<TextBlock
 											Margin="0,-4,0,0"
 											Classes="Caption"
-											Text="Gym Admin"/>
+											Text="{CompiledBinding Role}"/>
 									</StackPanel>
 								</Grid>
 							</shadui:MenuItemAssist.Label>
