fix(employee-profile-info-viewmodel): bug where the profile-picture of the currently logged user and selected-employee data conflict one another

--- a/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
+++ b/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
@@ -83,7 +83,7 @@
 													Name="EmployeeProfileImage1"
 													Stretch="UniformToFill"
 													IsVisible="True"
-													Source="{CompiledBinding SelectedEmployeeData.AvatarSource}"/>
+													Source="{CompiledBinding DisplayAvatarSource}"/>
 											</Border>
 
 											<!-- Username -->
