fix(components): bug where profile-picture of employee does not match if the secondary breakpoint is executed in the View

--- a/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
+++ b/Components/EmployeeProfile/EmployeeProfileInformationView.axaml
@@ -509,7 +509,7 @@
 													Name="EmployeeProfileImage2"
 													Stretch="UniformToFill"
 													IsVisible="True"
-													Source="avares://AHON_TRACK/Assets/ManageEmployeesView/user-admin.png"/>
+													Source="{CompiledBinding DisplayAvatarSource}"/>
 											</Border>
 
 											<!-- Username -->
