--- a/Views/GymDemographicsView.axaml
+++ b/Views/GymDemographicsView.axaml
@@ -65,84 +65,56 @@
                         shadui:ControlAssist.Label="To"
                         shadui:ControlAssist.ReadOnly="True"
                         SelectedDate="{CompiledBinding DemographicsGroupSelectedToDate}" />
-                    <Button 
-                        Classes="Primary" 
-                        VerticalAlignment="Bottom">
-                        <StackPanel Orientation="Horizontal">
-                            <Svg
-                                Width="20"
-                                Height="20"
-                                Path="avares://AHON_TRACK/Assets/GymDemographicsView/download-icon.svg"
-                                VerticalAlignment="Center"
-                                Margin="0,0,8,0"/>
-                            <TextBlock Text="Download" VerticalAlignment="Center"/>
-                        </StackPanel>
-                    </Button>
                 </StackPanel>
-                <Grid RowDefinitions="* * *" ColumnDefinitions="2* *" ColumnSpacing="30">
+                <Grid RowDefinitions="* *" ColumnDefinitions="* *" ColumnSpacing="30">
                     <shadui:Card Grid.Row="0" Grid.Column="0" HasShadow="True">
                         <StackPanel>
-                            <shadui:CardTitle Content="Demographics" FontSize="20" FontWeight="SemiBold"/>
-                            <Grid ColumnDefinitions="1* *" ColumnSpacing="35">
-                                <StackPanel Grid.Column="0">
-                                    <TextBlock 
-                                        Text="Gender" 
-                                        FontSize="18" 
-                                        FontWeight="Medium"
-                                        Margin="0,20,0,0" />
-                                    <lvc:PieChart 
-                                        ZIndex="-1"
-                                        Margin="0,-30,0,0"
-                                        InitialRotation="120" 
-                                        SeriesSource="{CompiledBinding GenderPieDataCollection}" 
-                                        LegendPosition="Right" 
-                                        Height="310">
-                                        <lvc:PieChart.SeriesTemplate>
-                                            <DataTemplate x:DataType="viewModels:PieData">
-                                                <lvc:XamlPieSeries
-                                                    SeriesName="{Binding Name}"
-                                                    Values="{Binding Values}"
-                                                    Stroke="{lvc:SolidColorPaint Color='#fff', StrokeWidth=2}"
-                                                    Fill="{Binding Color, Converter={StaticResource StringToPaintConverter}}"
-                                                    HoverPushout="15"
-                                                    DataLabelsFormatter="{Binding Formatter}"
-                                                    DataLabelsSize="15"
-                                                    ShowDataLabels="{Binding IsTotal}"
-                                                    DataLabelsPosition="Outer"
-                                                    IsVisibleAtLegend="{Binding IsTotal}" >
-                                                </lvc:XamlPieSeries>
-                                            </DataTemplate>
-                                        </lvc:PieChart.SeriesTemplate>
-                                    </lvc:PieChart>
-                                </StackPanel>
-                                <StackPanel Grid.Column="1">
-                                    <TextBlock 
-                                        Text="Age Group" 
-                                        FontSize="18" 
-                                        FontWeight="Medium"
-                                        Margin="0,20,0,0" />
-                                    <lvc:CartesianChart
-                                        Height="300"
-                                        Name="CartesianChart1"
-                                        Margin="12,0,12,12"
-                                        XAxes="{CompiledBinding XAxes}"
-                                        YAxes="{CompiledBinding YAxes}"
-                                        HoveredPointsChangedCommand="{CompiledBinding HoveredPointsChangedCommand}"
-                                        TooltipTextSize="14">
-                                        <lvc:CartesianChart.Series>
-                                            <lvc:XamlColumnSeries
-                                                Values="{CompiledBinding AgeSeries[0].Values}"
-                                                Stroke="{lvc:SolidColorPaint Color='#00000000'}"
-                                                PointMeasuredCommand="{CompiledBinding PointMeasuredCommand}"/>
-                                        </lvc:CartesianChart.Series>
-                                    </lvc:CartesianChart>
-                                </StackPanel>
-                            </Grid>
+                            <shadui:CardTitle Content="Gender" FontSize="20" FontWeight="SemiBold" />
+                            <StackPanel>
+                                <lvc:PieChart
+                                    ZIndex="-1"
+                                    InitialRotation="120"
+                                    SeriesSource="{CompiledBinding GenderPieDataCollection}"
+                                    LegendPosition="Right"
+                                    Height="310">
+                                    <lvc:PieChart.SeriesTemplate>
+                                        <DataTemplate x:DataType="viewModels:PieData">
+                                            <lvc:XamlPieSeries
+                                                SeriesName="{Binding Name}"
+                                                Values="{Binding Values}"
+                                                Stroke="{lvc:SolidColorPaint Color='#fff', StrokeWidth=2}"
+                                                Fill="{Binding Color, Converter={StaticResource StringToPaintConverter}}"
+                                                HoverPushout="15"
+                                                DataLabelsFormatter="{Binding Formatter}"
+                                                DataLabelsSize="15"
+                                                ShowDataLabels="{Binding IsTotal}"
+                                                DataLabelsPosition="Outer"
+                                                IsVisibleAtLegend="{Binding IsTotal}">
+                                            </lvc:XamlPieSeries>
+                                        </DataTemplate>
+                                    </lvc:PieChart.SeriesTemplate>
+                                </lvc:PieChart>
+                            </StackPanel>
                         </StackPanel>
                     </shadui:Card>
                     <shadui:Card Grid.Row="0" Grid.Column="1" HasShadow="True">
                         <StackPanel>
-                            <shadui:CardTitle Content="Dunno what to do here)" FontSize="20" FontWeight="SemiBold" />
+                            <shadui:CardTitle Content="Age Group" FontSize="20" FontWeight="SemiBold" />
+                            <lvc:CartesianChart
+                                Height="300"
+                                Name="CartesianChart1"
+                                Margin="12,0,12,12"
+                                XAxes="{CompiledBinding XAxes}"
+                                YAxes="{CompiledBinding YAxes}"
+                                HoveredPointsChangedCommand="{CompiledBinding HoveredPointsChangedCommand}"
+                                TooltipTextSize="14">
+                                <lvc:CartesianChart.Series>
+                                    <lvc:XamlColumnSeries
+                                        Values="{CompiledBinding AgeSeries[0].Values}"
+                                        Stroke="{lvc:SolidColorPaint Color='#00000000'}"
+                                        PointMeasuredCommand="{CompiledBinding PointMeasuredCommand}"/>
+                                </lvc:CartesianChart.Series>
+                            </lvc:CartesianChart>
                         </StackPanel>
                     </shadui:Card>
                 </Grid>
