fix(components): bug where selected-member does not show their profile picture when upgrading or renewing

--- a/Components/AddNewMember/AddNewMemberView.axaml
+++ b/Components/AddNewMember/AddNewMemberView.axaml
@@ -170,7 +170,7 @@
                                                 Name="MemberProfileImage"
                                                 Stretch="UniformToFill"
                                                 IsVisible="True"
-                                                Source="avares://AHON_TRACK/Assets/ManageMembershipView/default-profile-picture.png" />
+                                                Source="{CompiledBinding ProfileImageSource}" />
 											<!-- Profile image placeholder -->
 										</Border>
 										<Button
